--- a/Sources/SampleUA510/MainPage.xaml
+++ b/Sources/SampleUA510/MainPage.xaml
@@ -10,19 +10,32 @@
       <Grid.RowDefinitions>
          <RowDefinition Height="auto"/>
          <RowDefinition Height="*"/>
+         <RowDefinition Height="*"/>
          <RowDefinition Height="auto"/>
       </Grid.RowDefinitions>
 
       <Label Margin="30" HorizontalOptions="Center" Text="Unitech Sample" FontSize="36" FontAttributes="Bold" />
 
-      <StackLayout Grid.Row="1" HorizontalOptions="Center" VerticalOptions="Center" >
+      <ListView Grid.Row="1" Margin="30" ItemsSource="{Binding LastScans}" ItemAppearing="itemAppearing"  >
+         <ListView.ItemTemplate>
+            <DataTemplate>
+               <ViewCell>
+                  <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
+                     <Label Text="{Binding Name}" Margin="0,0,20,0" VerticalTextAlignment="Center"/>
+                     <Label Text="{Binding Value}" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                  </StackLayout>
+               </ViewCell>
+            </DataTemplate>
+         </ListView.ItemTemplate>
+      </ListView>
 
-         <Label Margin="30,10,30,10" Text="{Binding Data}" FontAttributes="Bold" FontSize="16" HorizontalTextAlignment="Center"  />
-         <Label Margin="30,10,30,10" Text="{Binding Length,StringFormat='length={0}'}" HorizontalTextAlignment="Center"  />
-         <Label Margin="30,10,30,10" Text="{Binding Symbology}" FontAttributes="Bold" HorizontalTextAlignment="Center"  />
+      <StackLayout Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" >
+
+         <Label Margin="30,10,30,5" Text="{Binding Data}" FontAttributes="Bold" FontSize="16" HorizontalTextAlignment="Center"  />
+         <Label Margin="30,5,30,5" Text="{Binding Length,StringFormat='length={0}'}" HorizontalTextAlignment="Center"  />
+         <Label Margin="30,5,30,10" Text="{Binding Symbology}" FontAttributes="Bold" HorizontalTextAlignment="Center"  />
 
       </StackLayout>
-      
-      
+
    </Grid>
 </ContentPage>
