--- a/Sources/SampleUA510/MainPage.xaml
+++ b/Sources/SampleUA510/MainPage.xaml
@@ -50,9 +50,10 @@
 
       <StackLayout Grid.Row="3" Margin="40" HorizontalOptions="Center" VerticalOptions="Center" Orientation="Horizontal"  >
 
-         <Label Text="EA502" VerticalTextAlignment="Center"/>
+         <!--<Label Text="EA502" VerticalTextAlignment="Center"/>
          <Switch OnColor="Gray"   IsToggled="{Binding IsEA510}" IsEnabled="False"/>
-         <Label Text="EA510" VerticalTextAlignment="Center"/>
+         <Label Text="EA510" VerticalTextAlignment="Center"/>-->
+         <Label x:Name="lManufacturer" HorizontalOptions="Center" VerticalTextAlignment="Center" Text="Unitech Sample" FontSize="24" FontAttributes="Bold" />
 
       </StackLayout>
    </Grid>
